# bitrust

./: Cargo.toml  LICENSE  README.markdown  build.rs  rustfmt.toml
aux/: 0.data  0.guide  0.hint  test_datafile.data  test_datafile.data.guide  test_hintfile.hint  test_hintfile.hint.guide
benches/: bitrust_bench.rs
example_configs/: automerge.toml  no-automerge.toml
example_service/: Cargo.toml  README.markdown  build.rs
example_service/proto/: service.proto
example_service/src/: lib.rs  service.rs  service_grpc.rs
proto/: bitrust_pb.proto
scripts/: generate_datafile.py  generate_hintfile.py
src/: bitrust_pb.rs  common.rs  config.rs  errors.rs  keydir.rs  lib.rs  lockfile.rs  locking.rs  main.rs  storage.rs  util.rs
tests/: model_test.rs
