[package]
name = "bitrust"
version = "0.1.0"
authors = ["Yati Sagade <mail@ysagade.nl>"]

[dependencies]
crc = "1.8.1"
log = "^0.3.1"
simplelog = "0.5.2"
byteorder = "^1"
bytes = "0.4"
getopts = "0.2"
tempfile = "3"
proptest = "0.7.2"
rand = "0.3"
fs2 = "0.4.3"
ctrlc = { version = "3.0", features = [ "termination" ] }
regex = "1"
lazy_static = "1.0.1"
error-chain = "0.12.0"
isatty = "0.1.9"
num = "0.2.0"
