[package]
name = "bitrust"
version = "0.1.0"
authors = ["Yati Sagade <mail@ysagade.nl>"]
license-file = "LICENSE"
description = "A Rust implementation of Bitcask, usable as a binary or a library."
readme = "README.markdown"
homepage = "https://github.com/yati-sagade/bitrust"
repository ="https://github.com/yati-sagade/bitrust" 
keywords = ["key value store", "database"]
categories = ["database-implementations"]

[build-dependencies]
protoc-rust = "2.8.0"

[dependencies]
crc = "1.8.1"
log = "^0.3.1"
simplelog = "0.5.2"
byteorder = "^1"
bytes = "0.4"
getopts = "0.2"
tempfile = "3"
proptest = "0.7.2"
rand = "0.3"
fs2 = "0.4.3"
ctrlc = { version = "3.0", features = [ "termination" ] }
regex = "1"
lazy_static = "1.0.1"
error-chain = "0.12.2"
isatty = "0.1.9"
num = "0.2.0"
protobuf = "2.14.0"
dirs = "2.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5.6"
crossbeam = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bitrust_bench"
harness = false
path = "benches/bitrust_bench.rs"
