[package]
name = "example_service"
version = "0.1.0"
authors = ["Yati Sagade <mail@ysagade.nl>"]
edition = "2018"

[build-dependencies]
protoc-rust-grpc = "0.8.2"

[dependencies]
protobuf = "2.14.0"
bitrust = {path = ".."}
futures = "0.3.*"
grpc = "0.8.2"
grpc-protobuf = "0.8.2"
dirs = "2.0"
ctrlc = { version = "3.0", features = [ "termination" ] }
log = "^0.3.1"